fixtures/frontend/milestone-2/invalid/noninteger-literal-type-mismatch/main.aivi
val pi:Float = 19.25d
val amount:Decimal = 3.14
val count:BigInt = 42
